[gd_scene load_steps=5 format=3 uid="uid://i36a1s6u3rgb"]

[ext_resource type="Script" path="res://extras/tools/mod_tools_product.gd" id="1_pfauc"]
[ext_resource type="StyleBox" uid="uid://bah1etxdl4seb" path="res://ui/themes/ui_panel.tres" id="2_fxfpg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_niie2"]
bg_color = Color(0.054902, 0.611765, 0.333333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2vqq"]
bg_color = Color(0.709804, 0.14902, 0.14902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[node name="ModToolsProduct" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfauc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = ExtResource("2_fxfpg")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.784314, 0.513726, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "DEBUG: Add Product"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Product Name:"

[node name="ProductName" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Product must have a name"
mouse_filter = 1
alignment = 2
expand_to_text_length = true

[node name="HFlowContainer2" type="HFlowContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Product Family:"

[node name="FamilySelector" type="OptionButton" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
alignment = 1

[node name="HFlowContainer3" type="HFlowContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Product Rank:"

[node name="Rank" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Integer only"
mouse_filter = 1
text = "0"
alignment = 2
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="HFlowContainer4" type="HFlowContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer4"]
layout_mode = 2
text = "Density:"

[node name="Density" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Product must have a density greater than 0"
mouse_filter = 1
text = "1.0"
alignment = 2
virtual_keyboard_type = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Tooltip:"
horizontal_alignment = 1

[node name="Tooltip" type="TextEdit" parent="PanelContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
placeholder_text = "Adding a tooltip is optional, but recommended"
wrap_mode = 1
scroll_fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="add" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_niie2")
text = "Add"

[node name="cancel" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_k2vqq")
text = "Cancel"

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer/ProductName" to="." method="_on_product_name_text_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer3/Rank" to="." method="_on_rank_text_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HFlowContainer4/Density" to="." method="_on_density_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
